2013-12-27  Ryuan Choi  <ryuan.choi@samsung.com>

        [EFL][WK2] MiniBrowser scale up/down infinitely after r161087
        https://bugs.webkit.org/show_bug.cgi?id=126254

        Reviewed by Gyuyoung Kim.

        After r161087, contentScaleFactor of WebView is synced with pageScaleFactor
        of WebPage. It means that WKViewGetContentScaleFactor might not be same
        with PageViewportController's current scale value until received PageScaleFactorDidChange.

        * UIProcess/efl/PageViewportControllerClientEfl.cpp:
        (WebKit::PageViewportControllerClientEfl::setViewportPosition):
        Use controller's current scale just to update and sync the position.

2013-12-26  Martin Robinson  <mrobinson@igalia.com>

        Small build fix for the GTK+ CMake port

        * UIProcess/API/gtk/tests/CMakeLists.txt: Make the way the output directory is specified similar
        to the WebKit1 version of these tests, so that it is more difficult to inadvertently specify the
        wrong directory.

2013-12-26  Thiago de Barros Lacerda  <thiago.lacerda@openbossa.org>

        [WK2][CoordinatedGraphics] Removing duplicate scale information from WebVIew.cpp
        https://bugs.webkit.org/show_bug.cgi?id=126243

        Reviewed by Benjamin Poulain.

        The scale factor of the WebView must reflect the same information present in
        WebPageProxy.
        Previously, in WebView.cpp, there was a m_contentScaleFactor member, which adds
        information duplication and needs to be synchronizing with pageScaleFactor in
        WebPageProxy. We can avoid this by just making WebView access and set WebPageProxy's
        pageScaleFactor directly.

        * UIProcess/CoordinatedGraphics/WebView.cpp:
        (WebKit::WebView::WebView):
        (WebKit::WebView::setContentScaleFactor):
        (WebKit::WebView::transformToScene):
        (WebKit::WebView::visibleContentsSize):
        * UIProcess/CoordinatedGraphics/WebView.h: