@@ -1425,8 +1425,6 @@ webkit2_plugin_process_sources += \
 	Source/WebKit2/Shared/ActivityAssertion.h \
 	Source/WebKit2/Shared/ChildProcess.cpp \
 	Source/WebKit2/Shared/ChildProcess.h \
-	Source/WebKit2/Shared/ChildProcessProxy.cpp \
-	Source/WebKit2/Shared/ChildProcessProxy.h \
 	Source/WebKit2/Shared/ConnectionStack.cpp \
 	Source/WebKit2/Shared/ConnectionStack.h \
 	Source/WebKit2/Shared/ProcessExecutablePath.h \
@@ -1459,9 +1457,6 @@ webkit2_plugin_process_sources += \
 	Source/WebKit2/Shared/gtk/WebEventFactory.cpp \
 	Source/WebKit2/Shared/cairo/ShareableBitmapCairo.cpp \
 	Source/WebKit2/Shared/soup/WebCoreArgumentCodersSoup.cpp \
-	Source/WebKit2/UIProcess/Launcher/ProcessLauncher.cpp \
-	Source/WebKit2/UIProcess/Launcher/ProcessLauncher.h \
-	Source/WebKit2/UIProcess/Launcher/gtk/ProcessLauncherGtk.cpp \
 	Source/WebKit2/UIProcess/Plugins/unix/PluginProcessProxyUnix.cpp \
 	Source/WebKit2/WebProcess/Plugins/Plugin.cpp \
 	Source/WebKit2/WebProcess/Plugins/Plugin.h \
